Bug 580251 -  Be explicit about app tabs being display:block and use vertical-align where -moz-box-align doesn't work. r=dao
UltraBlame original commit: fbe2a5e0a1db7d324f57d07c7dea268720d3861d

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -54,6 +54,7 @@ tabbrowser {
 
 .tabbrowser-tab[pinned] {
   position: fixed;
+  display: block; 
 }
 
 .tabbrowser-tab[pinned] > .tab-text {
